--- a/apps/admin-panel/package.json
+++ b/apps/admin-panel/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack/react-query": "^5.66.5",
     "@tanstack/react-table": "^8.21.2",
     "@types/papaparse": "^5.3.15",
     "axios": "^1.7.9",
