Added: Seller Auth and setup DB

--- a/apps/admin-panel/.env.local
+++ b/apps/admin-panel/.env.local
@@ -2,3 +2,4 @@ MONGODB_URI="mongodb+srv://muazpbt:lMLxGHpdRq773vME@ecommerce-cluster.d7abr.mong
 AUTH_SECRET="O2fanmhj4m/IG5cxJHkCJpqx4mI59r5jXRqJJHOIfiE="
 ADMIN_USER="muazhasan"
 ADMIN_PASSWORD="muazhasan@123"
+NEXT_PUBLIC_BACKEND_URI="http://localhost:3000/"
