update: updates API calls

--- a/apps/admin-panel/.env.local
+++ b/apps/admin-panel/.env.local
@@ -1,5 +1,5 @@
-MONGODB_URI="mongodb+srv://muazpbt:lMLxGHpdRq773vME@ecommerce-cluster.d7abr.mongodb.net"
-AUTH_SECRET="O2fanmhj4m/IG5cxJHkCJpqx4mI59r5jXRqJJHOIfiE="
+AUTH_SECRET="2g6arVOJKMKBiiFWTZzUQ/WMJBj6UG6i9o5siOw1cpk="
+NEXT_PUBLIC_ADMIN_SECRET_KEY="O2fanmhj4m/IG5cxJHkCJpqx4mI59r5jXRqJJHOIfiE="
 ADMIN_USER="muazhasan"
 ADMIN_PASSWORD="muazhasan@123"
-NEXT_PUBLIC_BACKEND_URI="http://localhost:3000/"
+NEXT_PUBLIC_BACKEND_URI="http://localhost:5002"
