--- a/apps/seller-panel/package.json
+++ b/apps/seller-panel/package.json
@@ -19,12 +19,14 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack/react-table": "^8.21.2",
     "@tiptap/extension-color": "^2.11.7",
     "@tiptap/extension-list-item": "^2.11.7",
     "@tiptap/extension-text-style": "^2.11.7",
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
+    "@types/papaparse": "^5.3.15",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +35,7 @@
     "next": "15.2.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "papaparse": "^5.5.2",
     "quill": "2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
