feat: add delete product dialog component and edit product modal
- Implemented DeleteProductDialog component for product deletion with confirmation.
- Added EditProductModal component as a placeholder for future editing functionality.
- Created AlertDialog component for reusable alert dialog functionality.
- Introduced multer middleware for handling file uploads in the server.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,12 +19,17 @@
   },
   "homepage": "https://github.com/cognivos/CS003#readme",
   "dependencies": {
+    "@azure/storage-blob": "^12.27.0",
+    "@types/multer": "^1.4.12",
+    "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
+    "multer": "1.4.5-lts.2",
     "ts-node": "^10.9.2",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
