--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
     {
       "src": "apps/admin-panel/package.json",
       "use": "@vercel/next"
+    },
+    {
+      "src": "packages/server/package.json",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -22,6 +26,10 @@
     {
       "src": "/admin-panel/(.*)",
       "dest": "apps/admin-panel/$1"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "packages/server/dist/$1"
     }
   ]
 } 
