feat: update server API routes and improve authentication handling
- Modified the development script to build TypeScript before running the server.
- Added a new customer route to handle customer-related API requests.
- Updated authentication middleware to use 'user' instead of 'seller' for better clarity and consistency.
- Adjusted category and product controllers to reference 'user' for seller identification.
- Introduced customer validation schema to enhance input validation for customer data.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "description": "Global server APIs for all panels",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/server.ts",
+    "dev": "tsc -b && nodemon dist/server.js",
     "build": "tsc -b",
     "start": "tsc -b && node dist/server.js"
   },
