--- a/apps/seller-panel/package.json
+++ b/apps/seller-panel/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-quill-new": "^3.4.6",
+    "recharts": "^2.15.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
